--- a/E-Commerce/Views/Customer/Index.cshtml
+++ b/E-Commerce/Views/Customer/Index.cshtml
@@ -106,7 +106,7 @@
                                     <input class="form-control" type="text" name="Mail" value="@y.Mail">
                                 </div>
                                 <div class="col-md-12">
-                                    <a href=""><button class="btn">Update Account</button></a>
+                                    <a typeof="submit" class="btn">Update Account</a>
                                     <br><br>
                                 </div>
 
