--- a/E-Commerce/Views/Personel/DetailProduct.cshtml
+++ b/E-Commerce/Views/Personel/DetailProduct.cshtml
@@ -1,8 +1,9 @@
 ﻿@model EntityLayer.Concrete.Product
 @{
-    ViewData["Title"] = "AddProduct";
+    ViewData["Title"] = "DetailProduct";
     Layout = "~/Views/Shared/_PersonelLayout.cshtml";
 }
+
 <form class="forms-sample" asp-action="AddProduct" enctype="multipart/form-data" method="post">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="form-group">
@@ -23,7 +24,7 @@
     <div class="form-group">
         <label for="exampleInputEmail3">Ürün Kategorini Seçin</label>
         <select asp-for="CategoryId" class="form-control" title="Choose one of the following...">
-            <option value="0" >Seçiniz..</option>
+            <option value="0">Seçiniz..</option>
             @foreach (var item in ViewBag.CategoryId)
             {
                 <option value="@item.Value" class="form-control">@item.Text</option>
@@ -31,17 +32,19 @@
         </select>
         <span asp-validation-for="CategoryId" class="text-danger"></span>
     </div>
-<div class="form-group">
-    <label>File upload</label>
-    <input type="file" asp-for="Images" multiple class="file-upload-default">
-    <div class="input-group col-xs-12">
-        <input type="text" class="form-control file-upload-info" disabled="" placeholder="Upload Image">
-        <span class="input-group-append">
-            <button class="file-upload-browse btn btn-gradient-primary" type="button">Upload</button>
-        </span>
+    @await Component.InvokeAsync("ImageUpd", new { id = Model.Id })
+    <br />
+    <div class="form-group">
+        <label>File upload</label>
+        <input type="file" asp-for="Images" multiple class="file-upload-default">
+        <div class="input-group col-xs-12">
+            <input type="text" class="form-control file-upload-info" disabled="" placeholder="Upload Image">
+            <span class="input-group-append">
+                <button class="file-upload-browse btn btn-gradient-primary" type="button">Upload</button>
+            </span>
+        </div>
+        <span asp-validation-for="Images" class="text-danger"></span>
     </div>
-    <span asp-validation-for="Images" class="text-danger"></span>
-</div>
     <div class="form-group">
         <label for="exampleTextarea1">Product Description</label>
         <textarea asp-for="description" class="form-control" id="exampleTextarea1"></textarea>
@@ -51,18 +54,11 @@
     <button class="btn btn-light">Cancel</button>
 </form>
 
-@section Script{
+@section Scripts{
     <script src="~/ckeditor/ckeditor.js"></script>
     <script>
         CKEDITOR.replace("exampleTextarea1")
     </script>
 }
-
-
-
-
-
-
-
 
 
