--- a/E-Commerce/Views/Shared/_Layout.cshtml
+++ b/E-Commerce/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
 
                         <div class="navbar-nav ml-auto">
                             <div class="navbar-nav ml-auto">
-                                <a href="/Customer/Login" class="nav-item nav-link" ">Giriş Yap</a>
+                                <a href="/Customer/Login" class="nav-item nav-link">Giriş Yap</a>
                                 <a href="/Session/Register" class="nav-item nav-link">Kayıt Ol</a>
                             </div>
                         </div>
