--- a/E-Commerce/Views/Session/Login.cshtml
+++ b/E-Commerce/Views/Session/Login.cshtml
@@ -14,16 +14,13 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <label>E-mail</label>
-                                <input type="text" asp-for="Mail" value="" class="form-control" />
+                                <input type="text" asp-for="Mail"  class="form-control" />
                                 <span asp-validation-for="Mail" class="text-danger"></span>
                             </div>
                             <div class="col-md-6">
                                 <label>Şifreniz</label>
-                                <input type="password" asp-for="Password" value="" class="form-control" />
+                                <input type="password" asp-for="Password" class="form-control" />
                                 <span asp-validation-for="Password" class="text-danger"></span>
-                            </div>
-                            <div class="txt1" style="color:red">
-                                @ViewBag.Message
                             </div>
                             <div class="col-md-12">
                                 <button class="btn">Giriş Yap</button>
