--- a/E-Commerce/Views/Shared/_PersonelLayout.cshtml
+++ b/E-Commerce/Views/Shared/_PersonelLayout.cshtml
@@ -9,6 +9,16 @@
     <!-- plugins:css -->
     <link rel="stylesheet" href="~/Vendor/vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="~/Vendor/vendors/css/vendor.bundle.base.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&subset=latin,cyrillic-ext" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css">
+    <style>
+        tfoot input {
+            width: 100%;
+            padding: 3px;
+            box-sizing: border-box;
+        }
+    </style>
     <!-- endinject -->
     <!-- Plugin css for this page -->
     <!-- End plugin css for this page -->
@@ -16,7 +26,6 @@
     <!-- endinject -->
     <!-- Layout styles -->
     <link rel="stylesheet" href="~/Vendor/css/style.css">
-    <!-- End layout styles -->
     <link rel="shortcut icon" href="~/Vendor/images/favicon.ico" />
     <link href="~/lib/datatables.net-bs4/dataTables.bootstrap4.min.css" rel="stylesheet" />
 </head>
@@ -265,10 +274,8 @@
     <!-- Custom js for this page -->
     <script src="~/Vendor/js/dashboard.js"></script>
     <script src="~/Vendor/js/todolist.js"></script>
-    <!-- End custom js for this page -->
-
-    <script src="~/lib/datatables.net-bs4/dataTables.bootstrap4.min.js"></script>
-    <script src="~/lib/datatables.net/jquery.dataTables.min.js"></script>
+    <script src="~/Vendor/js/file-upload.js"></script>
     @RenderSection("Script", required: false)
+   
 </body>
 </html>
